Introduce ObjectHistory.Entry.supplements
Deprecate ObjectHistory.Entry.supplement and introduce
ObjectHistory.Entry.supplements, which allows storing multiple
supplements in a list of strings.

Merged-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>